# facade_model

./: .gitignore  README.md  house_selector.py  object_removal.py  pipeline_clean_select_houses.ipynb  pyproject.toml  remove_objects_with_prompt.py  requirements_python7_12.txt  setup.cfg  test_function.py
src/: house_selector.py  object_removal.py
src/facade_model/: __init__.py  house_selector.py  lama_inpaint.py  metadata_pipeline.py  object_removal.py
src/facade_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lama/saicinpainting/training/trainers/: __init__.py
test/: test_function.py
