[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facade-model"
version = "0.1.0"
description = "Library to remove objects from facades and select the principal facade"
authors = [
  { name = "William Prada", email = "wpradabuitrago@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "ultralytics",
  "pyyaml",
  "tqdm",
  "numpy==1.26.4",
  "easydict==1.9.0",
  "scikit-image",
  "scikit-learn",
  "opencv-python",
  "tensorflow",
  "joblib",
  "matplotlib",
  "pandas",
  "albumentations==0.5.2",
  "hydra-core==1.3.2",
  "pytorch-lightning==1.2.9",
  "tabulate",
  "kornia==0.5.0",
  "webdataset",
  "packaging",
  "wldhx.yadisk-direct",
  "timm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
